--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="line" class="chart"></div>
 
         <script src="https://cdn.rawgit.com/HUAMENGDIGUO/HUAMENGDIGUO-webcrawler/bc6fe9f9/Node.js%E7%88%AC%E8%99%AB/%E7%88%AC%E5%8F%96%E8%B1%86%E7%93%A3%E9%9F%B3%E4%B9%90TOP250-visual/static/js/lib/jquery.min.js"></script>
-        <script src="js/lib/lodash.min.js"></script>
+        <script src="https://cdn.rawgit.com/HUAMENGDIGUO/HUAMENGDIGUO-webcrawler/44987e8d/Node.js%E7%88%AC%E8%99%AB/%E7%88%AC%E5%8F%96%E8%B1%86%E7%93%A3%E9%9F%B3%E4%B9%90TOP250-visual/static/js/lib/lodash.min.js"></script>
         <script src="https://cdn.rawgit.com/HUAMENGDIGUO/HUAMENGDIGUO-webcrawler/1455299c/Node.js%E7%88%AC%E8%99%AB/%E7%88%AC%E5%8F%96%E8%B1%86%E7%93%A3%E9%9F%B3%E4%B9%90TOP250-visual/static/js/lib/echarts.min.js"></script>
         <!-- api.js 中是获取数据的代码 -->
         <script src="js/api.js"></script>
