--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>爬取豆瓣音乐TOP250-visual</title>
-        <link rel="stylesheet" href="css/music.css">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/HUAMENGDIGUO/HUAMENGDIGUO-webcrawler/5b9f97c5/Node.js%E7%88%AC%E8%99%AB/%E7%88%AC%E5%8F%96%E8%B1%86%E7%93%A3%E9%9F%B3%E4%B9%90TOP250-visual/static/css/music.css">
     </head>
     <body>
         <div id="pie" class="chart"></div>
