--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.2, minimum-scale=0.8, user-scalable=no">
         <title>爬取豆瓣音乐TOP250-visual</title>
         <link rel="stylesheet" href="https://cdn.rawgit.com/HUAMENGDIGUO/HUAMENGDIGUO-webcrawler/5b9f97c5/Node.js%E7%88%AC%E8%99%AB/%E7%88%AC%E5%8F%96%E8%B1%86%E7%93%A3%E9%9F%B3%E4%B9%90TOP250-visual/static/css/music.css">
+        <style media="screen">
+        </style>
     </head>
     <body>
         <div id="pie" class="chart"></div>
